k8s/CKA_Prep/07-Networking/dnstest-pods.yml
apiVersion: v1
kind: Pod
metadata:
    name: busybox-dnstest
spec:
    containers:
        - name: busybox
          image: radial/busyboxplus:curl
          command: ['sh', '-c', 'while true; do sleep 3600; done']
---
apiVersion: v1
kind: Pod
metadata:
    name: nginx-dnstest
spec:
    containers:
        - name: nginx
          image: nginx:1.19.2
          ports:
              - containerPort: 80
