k8s/CKA_Prep/07-Networking/np-nginx.yml
apiVersion: v1
kind: Pod
metadata:
    name: np-nginx
    namespace: np-test
    labels:
        app: nginx
spec:
    containers:
        - name: nginx
          image: nginx
